Fixed spacing issue when viewing on Palm Pre. Added warning to never edit the DD Framework

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -109,6 +109,8 @@ body
     font-weight:bold;
     color:#FFF;
     line-height:36px;
+    height:36px;
+    overflow:hidden;
 }
 .main .section .section-content
 {
